add a src folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="style.css" rel="stylesheet" />
+    <link href="src/style.css" rel="stylesheet" />
     <title>Calculator</title>
   </head>
   <body>
@@ -90,7 +90,7 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
